force-app/main/default/objects/UTXO_Address__c/UTXO_Address__c.object-meta.xml
<CustomObject>
    <label>UTXO Address</label>
    <nameField>
        <displayFormat>UTXO-{0000}</displayFormat>
        <label>UTXO Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UTXO Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>