force-app/main/default/objects/UTXO_Address__c/fields/Payment_Key_Hash__c.field-meta.xml
<CustomField>
    <fullName>Payment_Key_Hash__c</fullName>
    <label>Payment Key Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 