force-app/main/default/objects/UTXO_Address__c/fields/Private_Key__c.field-meta.xml
<CustomField>
    <fullName>Private_Key__c</fullName>
    <label>Private Key</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField> 