force-app/main/default/objects/UTXO_Address__c/fields/Public_Key__c.field-meta.xml
<CustomField>
    <fullName>Public_Key__c</fullName>
    <label>Public Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>