force-app/main/default/objects/UTXO_Address__c/fields/Staking_Key_Hash__c.field-meta.xml
<CustomField>
    <fullName>Staking_Key_Hash__c</fullName>
    <label>Staking Key Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>