force-app/main/default/objects/UTXO_Address__c/fields/Wallet__c.field-meta.xml
<CustomField>
    <fullName>Wallet__c</fullName>
    <label>Wallet</label>
    <referenceTo>Wallet__c</referenceTo>
    <relationshipLabel>UTXO Addresses</relationshipLabel>
    <relationshipName>UTXO_Addresses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>