force-app/main/default/objects/UTXO_Address__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Path__c</columns>
    <columns>Address__c</columns>
    <columns>Staking_Key_Hash__c</columns>
    <columns>Type__c</columns>
    <columns>Wallet__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>